--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,23 @@ body {
   background-color:white;
     text-align: center;
     margin: 0px;
-    overflow: hidden;
   }
 
+#one{
+  padding: 564px;
+  bottom: 465px;
+  display: flex;
+  flex-wrap: wrap;
+}
 
+img{
+  max-width: 20%;
+  margin: 34px;
+  bottom: 53px;
+  left:34px;
+  bottom:385px;
+
+}
 
 html {
     scroll-behavior: smooth;
@@ -91,7 +104,7 @@ button:hover {
 
 /* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
+  display:block; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   left: 0;
