--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,24 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css");
 
 
+
 body {
   background-color:white;
-    text-align: center;
-    margin: 0px;
   }
 
+  .banner{
+    background-color:white;
+    border-radius:5px;
+    padding:145px;
+    background-size: cover;
+  }
+
+
 #one{
-  padding: 564px;
-  bottom: 465px;
-  display: flex;
+  padding: 154px;
+  display: grid;
   flex-wrap: wrap;
+
 }
 
 img{
@@ -138,12 +145,6 @@ hr {
   cursor: pointer;
 }
 
-/* Clear floats */
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
 
 /* Change styles for cancel button and signup button on extra small screens */
 @media screen and (max-width: 10px) {
@@ -195,35 +196,41 @@ hr {
     color: #dabd18b2;
  }
  
-  
-#box{
-    background-color:white;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.05);
-    height: 20px;
-    object-fit: cover;
-    width: 70%;
-    background-image: url("./asset/keyhouse.jpg");
-    background-position: center;
-    background-size: cover;
-    position: relative;
-    
-}
-.card{
-  height: 10px;
-  object-fit: cover;
-  width: 70%;
-  background-color:white;
-  box-shadow:white;
-  bottom:6px;
 
-}
-  
 
 h1{
   color: white;
 }
 
+
+.rating {
+  display: inline-block;
+}
+
+.rating::before {
+  content: "★";
+  color: #ffd700;
+}
+
+.rating[data-rating="1"]::before {
+  content: "★";
+}
+
+.rating[data-rating="2"]::before {
+  content: "★★";
+}
+
+.rating[data-rating="3"]::before {
+  content: "★★★";
+}
+
+.rating[data-rating="4"]::before {
+  content: "★★★★";
+}
+
+.rating[data-rating="5"]::before {
+  content: "★★★★★";
+}
 
 
 
